--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@auth0/angular-jwt": "^5.2.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/react-paypal-js": "^8.1.0",
+    "@stripe/stripe-js": "^1.54.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
